--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<meta name="fragment" content="!">
 	<title data-ng-bind="'Marssight | Blockchain Explorer for Marscoin'">Marssight</title>
 	<meta name="keywords" content="Marscoin, transactions, blocks, address, block chain, best block, difficulty, hash serialized">
-	<meta name="description" content="Marscoin Insight. View detailed information on all Litecoin transactions and block.">
+	<meta name="description" content="Marscoin Insight. View detailed information on all Marscoin transactions and block.">
 	<link rel="shortcut icon" href="/img/icons/favicon.ico">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,400italic">
 	<link rel="stylesheet" href="/css/main.min.css">
